--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@
 spring.datasource.url=jdbc:h2:~/kakaotest
 spring.datasource.username=user
 spring.datasource.password=pass
+
+#Encoding 
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
